--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ https://gweb.wra.gov.tw/HydroInfoMobile/hichart?stno=1140H099&category=rtLE&sdat
             encodeURI(document.getElementById("lmonth").value)+
             encodeURI('/')+          
             encodeURI(document.getElementById("ldate").value);
-    alert("sdate : " + document.getElementById("sdate").value + " \n");
+    //alert("sdate : " + document.getElementById("sdate").value + " \n");
   }
 
   function submit_click(x) {
     document.getElementById("stno").value = x;
-    alert("Name : " + x + " \n");
+    //alert("Name : " + x + " \n");
     myFunction();
     document.getElementById("form_id").submit(); // form submission
     /*    
